[gd_scene load_steps=87 format=3 uid="uid://b0ump57ta6uh8"]

[ext_resource type="Script" path="res://scene/game_objects/player/player.gd" id="1_8oolj"]
[ext_resource type="PackedScene" uid="uid://d02yl8nx3spsb" path="res://scene/abilities/attack_ability/attack_controller.tscn" id="2_prcev"]
[ext_resource type="PackedScene" uid="uid://bknx8pl355mwx" path="res://scene/components/health_component.tscn" id="3_eave7"]
[ext_resource type="Texture2D" uid="uid://d3ukp6q1gluku" path="res://assets/player/player.png" id="3_j2gi1"]
[ext_resource type="PackedScene" uid="uid://du8q88maxl7lh" path="res://scene/components/flash_component.tscn" id="4_hyd4m"]
[ext_resource type="Shader" path="res://scene/components/flash_component.gdshader" id="5_ucrvi"]
[ext_resource type="Texture2D" uid="uid://b5f7weaoy7qwp" path="res://assets/player/playerhorizontal.png" id="6_s2bh5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p13cp"]
resource_local_to_scene = true
shader = ExtResource("5_ucrvi")
shader_parameter/percent = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3lbui"]
bg_color = Color(0.06938, 0.00374375, 1.50409e-09, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_adcuv"]
bg_color = Color(0.696741, 0.0151457, 0.172647, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.06938, 0.00374375, 1.50409e-09, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_kovgu"]
radius = 32.0156

[sub_resource type="AtlasTexture" id="AtlasTexture_glcru"]
atlas = ExtResource("6_s2bh5")
region = Rect2(4032, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j315i"]
atlas = ExtResource("3_j2gi1")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ipnl"]
atlas = ExtResource("6_s2bh5")
region = Rect2(3936, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi8y1"]
atlas = ExtResource("3_j2gi1")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6qaj"]
atlas = ExtResource("3_j2gi1")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed70p"]
atlas = ExtResource("6_s2bh5")
region = Rect2(4128, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea6mr"]
atlas = ExtResource("3_j2gi1")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k68pj"]
atlas = ExtResource("3_j2gi1")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pwog"]
atlas = ExtResource("6_s2bh5")
region = Rect2(2208, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jiifv"]
atlas = ExtResource("6_s2bh5")
region = Rect2(2112, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8m8m"]
atlas = ExtResource("6_s2bh5")
region = Rect2(2016, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddv5d"]
atlas = ExtResource("6_s2bh5")
region = Rect2(1920, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t883"]
atlas = ExtResource("6_s2bh5")
region = Rect2(1824, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_54cld"]
atlas = ExtResource("6_s2bh5")
region = Rect2(1728, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kobt1"]
atlas = ExtResource("6_s2bh5")
region = Rect2(1632, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyf7f"]
atlas = ExtResource("6_s2bh5")
region = Rect2(1536, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d4i7"]
atlas = ExtResource("3_j2gi1")
region = Rect2(3552, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdo7k"]
atlas = ExtResource("3_j2gi1")
region = Rect2(3648, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3mi2"]
atlas = ExtResource("3_j2gi1")
region = Rect2(3744, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_28bbi"]
atlas = ExtResource("3_j2gi1")
region = Rect2(3840, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8suf"]
atlas = ExtResource("3_j2gi1")
region = Rect2(3936, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibc2b"]
atlas = ExtResource("3_j2gi1")
region = Rect2(4032, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_auxod"]
atlas = ExtResource("3_j2gi1")
region = Rect2(4128, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6m0e"]
atlas = ExtResource("3_j2gi1")
region = Rect2(4224, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkgbu"]
atlas = ExtResource("6_s2bh5")
region = Rect2(1440, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy2ys"]
atlas = ExtResource("6_s2bh5")
region = Rect2(1344, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj7lo"]
atlas = ExtResource("6_s2bh5")
region = Rect2(1248, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ddct"]
atlas = ExtResource("6_s2bh5")
region = Rect2(1152, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt057"]
atlas = ExtResource("6_s2bh5")
region = Rect2(1056, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_br4d0"]
atlas = ExtResource("6_s2bh5")
region = Rect2(960, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3g8m0"]
atlas = ExtResource("6_s2bh5")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxiya"]
atlas = ExtResource("6_s2bh5")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_douxn"]
atlas = ExtResource("3_j2gi1")
region = Rect2(2784, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouwmp"]
atlas = ExtResource("3_j2gi1")
region = Rect2(2880, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx2v7"]
atlas = ExtResource("3_j2gi1")
region = Rect2(2976, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wov1"]
atlas = ExtResource("3_j2gi1")
region = Rect2(3072, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0hs4"]
atlas = ExtResource("3_j2gi1")
region = Rect2(3168, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_46xvv"]
atlas = ExtResource("3_j2gi1")
region = Rect2(3264, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4s6sk"]
atlas = ExtResource("3_j2gi1")
region = Rect2(3360, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nng4r"]
atlas = ExtResource("3_j2gi1")
region = Rect2(3456, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic3nd"]
atlas = ExtResource("3_j2gi1")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsv5s"]
atlas = ExtResource("3_j2gi1")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrm6d"]
atlas = ExtResource("3_j2gi1")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj3mh"]
atlas = ExtResource("3_j2gi1")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1clk"]
atlas = ExtResource("3_j2gi1")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfpye"]
atlas = ExtResource("3_j2gi1")
region = Rect2(960, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg6t7"]
atlas = ExtResource("3_j2gi1")
region = Rect2(1056, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmm1w"]
atlas = ExtResource("3_j2gi1")
region = Rect2(1152, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26hho"]
atlas = ExtResource("6_s2bh5")
region = Rect2(2976, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwy7x"]
atlas = ExtResource("6_s2bh5")
region = Rect2(2880, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8107"]
atlas = ExtResource("6_s2bh5")
region = Rect2(2784, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuoxm"]
atlas = ExtResource("6_s2bh5")
region = Rect2(2688, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_grrbe"]
atlas = ExtResource("6_s2bh5")
region = Rect2(2592, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_06cge"]
atlas = ExtResource("6_s2bh5")
region = Rect2(2496, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfgfc"]
atlas = ExtResource("6_s2bh5")
region = Rect2(2400, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_evvut"]
atlas = ExtResource("6_s2bh5")
region = Rect2(2304, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sg01"]
atlas = ExtResource("3_j2gi1")
region = Rect2(1248, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_np6vx"]
atlas = ExtResource("3_j2gi1")
region = Rect2(1344, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kt21"]
atlas = ExtResource("3_j2gi1")
region = Rect2(1440, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i13sn"]
atlas = ExtResource("3_j2gi1")
region = Rect2(1536, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_33x8n"]
atlas = ExtResource("3_j2gi1")
region = Rect2(1632, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m1hm"]
atlas = ExtResource("3_j2gi1")
region = Rect2(1728, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_62ha7"]
atlas = ExtResource("3_j2gi1")
region = Rect2(1824, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml0d5"]
atlas = ExtResource("3_j2gi1")
region = Rect2(1920, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtlvk"]
atlas = ExtResource("3_j2gi1")
region = Rect2(2016, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_frkai"]
atlas = ExtResource("3_j2gi1")
region = Rect2(2112, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5ljk"]
atlas = ExtResource("3_j2gi1")
region = Rect2(2208, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7setl"]
atlas = ExtResource("3_j2gi1")
region = Rect2(2304, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkhxo"]
atlas = ExtResource("3_j2gi1")
region = Rect2(2400, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_roilx"]
atlas = ExtResource("3_j2gi1")
region = Rect2(2496, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cyjh"]
atlas = ExtResource("3_j2gi1")
region = Rect2(2592, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq04d"]
atlas = ExtResource("3_j2gi1")
region = Rect2(2688, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_x72wf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glcru")
}],
"loop": true,
"name": &"idle_east",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j315i")
}],
"loop": false,
"name": &"idle_north",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ipnl")
}],
"loop": true,
"name": &"idle_northeast",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi8y1")
}],
"loop": false,
"name": &"idle_northwest",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6qaj")
}],
"loop": false,
"name": &"idle_south",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed70p")
}],
"loop": true,
"name": &"idle_southeast",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea6mr")
}],
"loop": false,
"name": &"idle_southwest",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k68pj")
}],
"loop": false,
"name": &"idle_west",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pwog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jiifv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8m8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddv5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t883")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54cld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kobt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyf7f")
}],
"loop": true,
"name": &"walk_east",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d4i7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdo7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3mi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28bbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8suf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibc2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auxod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6m0e")
}],
"loop": true,
"name": &"walk_north",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkgbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy2ys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj7lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ddct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt057")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br4d0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g8m0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxiya")
}],
"loop": true,
"name": &"walk_northeast",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_douxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouwmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx2v7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wov1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0hs4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46xvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4s6sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nng4r")
}],
"loop": true,
"name": &"walk_northwest",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic3nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsv5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrm6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj3mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1clk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfpye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg6t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmm1w")
}],
"loop": true,
"name": &"walk_south",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_26hho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwy7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8107")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuoxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grrbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06cge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfgfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evvut")
}],
"loop": true,
"name": &"walk_southeast",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sg01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_np6vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kt21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i13sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33x8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m1hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62ha7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml0d5")
}],
"loop": true,
"name": &"walk_southwest",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtlvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frkai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5ljk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7setl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkhxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roilx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cyjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq04d")
}],
"loop": true,
"name": &"walk_west",
"speed": 16.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0nrqd"]
radius = 5.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8vkgq"]
radius = 5.5
height = 34.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(0, -18)
collision_layer = 0
script = ExtResource("1_8oolj")

[node name="AbilityManager" type="Node" parent="."]

[node name="AttackController" parent="AbilityManager" instance=ExtResource("2_prcev")]

[node name="HealthComponent" parent="." instance=ExtResource("3_eave7")]

[node name="FlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_hyd4m")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../AnimatedSprite2D")
flash_material = SubResource("ShaderMaterial_p13cp")

[node name="GracePeriod" type="Timer" parent="."]
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(48, 4)
offset_left = -24.0
offset_top = 18.0
offset_right = 24.0
offset_bottom = 22.0
pivot_offset = Vector2(24, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_3lbui")
theme_override_styles/fill = SubResource("StyleBoxFlat_adcuv")
max_value = 1.0
show_percentage = false

[node name="PickUpArea" type="Area2D" parent="."]
position = Vector2(0, -5)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource("CircleShape2D_kovgu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -14)
sprite_frames = SubResource("SpriteFrames_x72wf")
animation = &"idle_north"
autoplay = "walk_west"
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_0nrqd")

[node name="PlayerHurtBox" type="Area2D" parent="."]
position = Vector2(0, -5)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtBox"]
position = Vector2(-0.5, -6)
shape = SubResource("CapsuleShape2D_8vkgq")

[connection signal="timeout" from="GracePeriod" to="." method="_on_grace_period_timeout"]
[connection signal="area_entered" from="PlayerHurtBox" to="." method="_on_player_hurt_box_area_entered"]
[connection signal="area_exited" from="PlayerHurtBox" to="." method="_on_player_hurt_box_area_exited"]
